# ml-project-2-mlp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eval.sh  experiment1.sh  experiment2.sh  finetune.sh  hydra-setup.sh  label.sh  main.ipynb  pyproject.toml  reset-data.sh
conf/: eda.yaml  eval.yaml  label.yaml  scrape.yaml  train.yaml
conf/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
conf/data/: base.yaml  crowd.yaml  crowdsourced.yaml  default.yaml  gpt.yaml  llm.yaml  ours.yaml
conf/datamodule/: base.yaml  default.yaml  original.yaml
conf/experiment/: baseline.yaml  crowdsourced.yaml  example.yaml  exp1-finetuned.yaml  exp1-pretrained.yaml  exp2-finetuned.yaml  finetuned.yaml  pretrained.yaml  splits.yaml
conf/extras/: default.yaml
conf/hydra/: default.yaml
conf/labeler/: base.yaml  gpt-base.yaml  gpt-labeler-1.yaml  gpt-labeler1.yaml  gpt-labeler2.yaml  gpt-labeler3.yaml  gpt-labeler4.yaml  gpt3.5-context0.yaml  gpt3.5-context1.yaml  gpt3.5-context2.yaml  gpt3.5-context3.yaml  (+8 more)
ml_project_2_mlp/: conf.py  data.py  datamodule.py  gpt.py  labeler.py  log.py  logger.py  metrics.py  model.py  utils.py
notebooks/: analysis.ipynb  api.ipynb  checks.ipynb  curlie10k-release.ipynb  demo.ipynb  eda.ipynb  gptlabeler.ipynb  graphs.ipynb  homepage2vec.ipynb  loading.ipynb  preprocessing.ipynb
report/: IEEEtran.cls  cs433.bst  cs433.sty  icml2021.sty  literature.bib  main.tex
scripts/: api.py  eval.py  label.py  scrape.py  train.py
tests/: test_code_quality.py  test_local_homepage2vec.py  test_setup.py  utils.py
(+66 files in other folders)
